# api/controllers/transactions.js
@@ -110,10 +110,10 @@ TransactionsController.getTransactions = function(context, next) {
  * @param {function} next - Description of the param
  * @todo: Add description of the function and its parameters
  */
-TransactionsController.postTransactions = function(context, next) {
-	var transactions = context.request.swagger.params.transactions.value;
+TransactionsController.postTransaction = function(context, next) {
+	var transaction = context.request.swagger.params.transaction.value;
 
-	modules.transactions.shared.postTransactions(transactions, (err, data) => {
+	modules.transactions.shared.postTransaction(transaction, (err, data) => {
 		if (err) {
 			if (err instanceof ApiError) {
 				context.statusCode = err.code;
